--- a/tex/docinfo.tex
+++ b/tex/docinfo.tex
@@ -5,10 +5,10 @@
 % angepasst werden.
 
 % Titel der Arbeit auf Deutsch
-\newcommand{\hsmatitelde}{TEST}
+\newcommand{\hsmatitelde}{Portierung eines Laufplaners für sechsbeinige Laufroboter in das Robot Operating System}
 
 % Titel der Arbeit auf Englisch
-\newcommand{\hsmatitelen}{TEST}
+\newcommand{\hsmatitelen}{Transferring of a walk planner for six-legged walking robot into the robot operating system}
 
 % Weitere Informationen zur Arbeit
 \newcommand{\hsmaort}{Mannheim}    % Ort
