--- a/tex/docinfo.tex
+++ b/tex/docinfo.tex
@@ -8,7 +8,7 @@
 \newcommand{\hsmatitelde}{Portierung eines Laufplaners für sechsbeinige Laufroboter in das Robot Operating System}
 
 % Titel der Arbeit auf Englisch
-\newcommand{\hsmatitelen}{Transferring of a walk planner for six-legged walking robot into the robot operating system}
+\newcommand{\hsmatitelen}{Transferring of a walk planner for a six-legged walking robot into the robot operating system}
 
 % Weitere Informationen zur Arbeit
 \newcommand{\hsmaort}{Mannheim}    % Ort
