--- a/tex/kapitel/kapitel_5_test.tex
+++ b/tex/kapitel/kapitel_5_test.tex
@@ -1,8 +1,4 @@
 \chapter{Testen der Ergebnisse}
 \label{kap5}
 
-\section{Testen der Fußsteuerung}
-
-- mit Hilfe von Tripod Gait
-- Setup Tripod Gait
-- 4 Screenshots wo man ein paar Bewegungen sieht
+todo
