--- a/tex/kapitel/kapitel_6_zusammenfassung.tex
+++ b/tex/kapitel/kapitel_6_zusammenfassung.tex
@@ -1,4 +1,7 @@
 \chapter{Zusammenfassung}
 \label{kap6}
 
-todo
+Kap 2 --> Grundlagen (Lauron, Akrobat, Kinematik (Direkt, invers), ROS, Gazebo)
+Kap3 ---> Random Sampling Konzept (kurz zusammenfassen, was die Schritte waren)
+Kap4 ---> Implementierung Laufplaner (nochmal zusammenfassen, was die Schritte ware)
+Kap5 ---> Test der Implementierung, insbesondere Random Sampling
