--- a/tex/kapitel/kapitel_7_ausblick.tex
+++ b/tex/kapitel/kapitel_7_ausblick.tex
@@ -3,6 +3,8 @@
 
 todo
 
+- Test mit weiteren Welten (unebenes Gelände, Hügel, )
+- Test auf echtem Akrobat
 - Spline-Interpolation
 - Höheninformation
 - Sensorinformation
