--- a/tex/kapitel/kapitel_5_test.tex
+++ b/tex/kapitel/kapitel_5_test.tex
@@ -1,9 +1,7 @@
 \chapter{Testen der Ergebnisse}
 \label{kap5}
 
-Dieses Kapitel testet die Implementierung der Simulation und des nach \ac{ROS} und Gazebo migrierten Laufplaners. Zum einen können die Ergebnisse durch die Visualisierung in Gazebo überprüft werden. Eine weitere Möglichkeit der Auswertung, welche sich auch zur Fehleranalyse eignet, ist die Nutzung eines Frameworks, um mathematische Darstellungen anzufertigen. Dazu nutzt diese Arbeit das auf Python basierende Framework matplotlib \autocite{barrett2005matplotlib}. Damit lassen sich unter anderem Bewegungen der Füße und der Roboterkörpers darstellen.
-
-todo dreifußgang
+Dieses Kapitel testet die Implementierung des nach \ac{ROS} und Gazebo migrierten Laufplaners. Zum einen können die Ergebnisse durch die Visualisierung in Gazebo überprüft werden. Eine weitere Möglichkeit der Auswertung, welche sich auch zur Fehleranalyse eignet, ist die Nutzung eines Frameworks, um mathematische Darstellungen anzufertigen. Dazu nutzt diese Arbeit das auf Python basierende Framework matplotlib \autocite{barrett2005matplotlib}. Dieses wird mit Hilfe einem Header für C++ eingebunden, welcher die Befehle im Hintergrund in Python ausführt. Damit lassen sich unter anderem Bewegungen der Füße und des Roboterkörpers in einem Graphen darstellen.
 
 Das Random Sampling erfolgt wie in \autoref{kap3} beschrieben. Dabei gibt es einige Schritte, die bei der Implementierung fehlerhaft sein können, da sie auf verschiedenen Robotern mit anderen Werten ablaufen müssen. 
 
@@ -36,7 +34,7 @@ Das Random Sampling erfolgt wie in \autoref{kap3} beschrieben. Dabei gibt es ein
 
 Die erste Herausforderung ist das Absetzen eines Fußes. Während das Anheben eines Fußes in der Regel immer möglich ist, kann es beim Absetzen zu Problemen kommen. Das Ziel ist es, den Fuß in eine neue gültige und zufällige Position zu bringen. Diese sollte nach Möglichkeit in Richtung Ziel liegen, damit der Roboter voranschreiten kann. Bei der Generierung der Position wird ausgehend von einer Startposition ein Vektor addiert, der leicht in Richtung Ziel verschoben ist. Danach wird ein weiterer zufälliger Vektor addiert. Dann wird versucht, den Fuß an dieser Stelle abzusetzen. Ist diese Position nicht gültig, wird mit Hilfe einer Spiralsuche eine bessere Position gesucht. Die Implementierung erforderte im Gegensatz zum Lauron andere Werte für Vektorlänge und den Abständen der Spiralsuche, um genau solche Positionen zu finden, die den Roboter besser zum Ziel bringen können.
 
-Sind diese Werte angepasst, ergeben sich wie in \autoref{kap5:footDownNormal1} und \autoref{kap5:footDownNormal2} in den meisten Fällen bereits gültige Fußpositionen, vorausgesetzt das Weltmodell ist flach, ohne die Spiralsuche anwenden zu müssen. Selten kommt es dazu, dass eine Spiralsuche ablaufen muss. Beim Ablauf der Sprialsuche wird wie in \autoref{kap5:footDownSpiral1} und \autoref{kap5:footDownSpiral2} in der Regel immer ein gültiges Ergebnis gefunden. Nur sehr selten kommt es vor, dass ein Fuß keine Absetzposition findet. Ist dies der Fall, soll der Algorithmus die generierte Lösung verwerfen.
+Sind diese Werte angepasst, ergeben sich wie in \autoref{kap5:footDownNormal1} und \autoref{kap5:footDownNormal2} in den meisten Fällen bereits gültige Fußpositionen, ohne die Spiralsuche anwenden zu müssen, vorausgesetzt das Weltmodell ist flach. Selten kommt es dazu, dass eine Spiralsuche durchgeführt werden muss. Beim Ablauf der Sprialsuche wird wie in \autoref{kap5:footDownSpiral1} und \autoref{kap5:footDownSpiral2} in der Regel immer ein gültiges Ergebnis gefunden. Nur sehr selten kommt es vor, dass ein Fuß keine Absetzposition findet. Ist dies der Fall, soll der Algorithmus die generierte Lösung verwerfen.
 
 \begin{figure}[b!]
     \begin{center}
