--- a/tex/kapitel/kapitel_4_implementierung.tex
+++ b/tex/kapitel/kapitel_4_implementierung.tex
@@ -39,7 +39,7 @@ Der zuvor analysierte Laufplaner muss nun in das \ac{ROS} portiert werden. Ferne
 Da eine komplette Kopie des vorherigen Projekts auf Grund verschiedener Umgebungen nicht möglich ist, ist die Vorgehensweise schrittweise wichtige Codestellen zu übertragen und zu testen. Dies hat den Vorteil, dass Funktionen unabhängig voneinander getestet werden können. Damit ergibt sich der folgende Gesamtablauf für die Portierung:
 \begin{enumerate}
   \item Aufsetzen des \ac{ROS}-Pakets
-  \item Aufsetzen der Simulation
+  \item Aufsetzen des Pakets
   \begin{enumerate}
     \item Aufsetzen des Roboter-Modells
     \item Aufsetzen der Gelenkmotoren
